k8s/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: elasticsearch
  
  labels:
    name: elasticsearch
    managed-by: elasticsearch-deployment
    environment: production
