k8s/service.yaml

apiVersion: v1
kind: Service

metadata:
  name: es-discovery
  namespace: elasticsearch
  
  labels:
    app: elasticsearch
    component: discovery
    service-type: headless

spec:

  clusterIP: None
  

  selector:
    app: elasticsearch
  
  # Cluster node-to-node communication
  ports:
    - name: transport
      port: 9300
      targetPort: 9300
      protocol: TCP


apiVersion: v1
kind: Service

metadata:
  name: elasticsearch
  namespace: elasticsearch
  
  labels:
    app: elasticsearch
    component: api
    service-type: client-access

spec:

  type: ClusterIP

  selector:
    app: elasticsearch
  
  # HTTP API access for clients and queries
  ports:
    - name: http
      port: 9200
      targetPort: 9200
      protocol: TCP
